--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="con-tooltip left">
       <p> Left </p>
       <div class="tooltip ">
-        <p>Left</p>
+        <p>Сбросил пароли на роутере, сходил в салон связи и в итоге починил вай-фай</p>
       </div>
     </div>
 <!-- Top tooltip-->
