--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       
       <!-- Left tooltip -->
     <div class="con-tooltip left">
-      <p> Left </p>
+      <img src="star.png">
       <div class="tooltip ">
         <p>Сбросил пароли на роутере, сходил в салон связи и в итоге починил вай-фай</p>
       </div>
