--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       
       <!-- Left tooltip -->
     <div class="con-tooltip left">
-      <img src="star.png">
+      <img src="star.png" class="star" />
       <div class="tooltip ">
-        <p>Сбросил пароли на роутере, сходил в салон связи и в итоге починил вай-фай</p>
+        <p>Починил вай-фай</p>
       </div>
     </div>
+
 <!-- Top tooltip-->
       <div class="con-tooltip top">
         <p> Top </p>
