add gulyash star

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <p>Починил вай-фай</p>
       </div>
     </div>
+      <div class="con-tooltip left">
+      <img src="star.png" class="star" />
+      <div class="tooltip ">
+        <p>Приготовоил очень вкусный гуляш</p>
+      </div>
+    </div>
 <!--
       <div class="con-tooltip top">
         <p> Top </p>
