--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <p>Починил вай-фай</p>
       </div>
     </div>
-      <div class="con-tooltip left">
+      <div class="con-tooltip right">
       <img src="star.png" class="star" />
       <div class="tooltip ">
-        <p>Приготовоил очень вкусный гуляш</p>
+        <p>Приготовил очень вкусный гуляш</p>
       </div>
     </div>
 <!--
