making layout better

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="con">
       
       <!-- Left tooltip -->
-    <div class="con-tooltip left">
+    <div class="con-tooltip bottom">
       <img src="star.png" class="star" />
       <div class="tooltip ">
         <p>Починил вай-фай</p>
       </div>
     </div>
-      <div class="con-tooltip right">
+      <div class="con-tooltip left">
       <img src="star.png" class="star" />
       <div class="tooltip ">
-        <p>Приготовил очень вкусный гуляш</p>
+        <p>Приготовил вкусный гуляш</p>
       </div>
     </div>
 <!--
